WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57561
If a user doesn't have a Database/LocalStorage directory, it can't be created (sandbox violations)
https://bugs.webkit.org/show_bug.cgi?id=57561
Summary
If a user doesn't have a Database/LocalStorage directory, it can't be created...
Anders Carlsson
Reported
2011-03-31 10:26:55 PDT
If a user doesn't have a Database/LocalStorage directory, it can't be created (sandbox violations)
Attachments
Patch
(1.65 KB, patch)
2011-03-31 10:29 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-03-31 10:29:05 PDT
Created
attachment 87759
[details]
Patch
Anders Carlsson
Comment 2
2011-03-31 11:04:45 PDT
Committed
r82600
: <
http://trac.webkit.org/changeset/82600
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug