2011-03-31  Anders Carlsson  <andersca@apple.com>

Reviewed by John Sullivan, Darin Adler, Dan Bernstein and Sam Weinig.

        If a user doesn't have a Database/LocalStorage directory, it can't be created (sandbox violations)
        https://bugs.webkit.org/show_bug.cgi?id=57561
        <rdar://problem/9127411>

        Ensure that any readwrite sandbox directories actually exist before entering the sandbox.

        * WebProcess/mac/WebProcessMac.mm:
        (WebKit::appendReadwriteSandboxDirectory):


Canonical link: https://commits.webkit.org/72396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82600 268f45cc-cd09-0410-ab3c-d52691b4dbfc